ml-app-of-apps/services/mixtral/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mixtra7b-service
spec:
  selector:
    app: mixtral7b
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
